Bug 266984 - Maildispatcher can get stuck sending
Summary: Maildispatcher can get stuck sending
Status: RESOLVED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Microsoft Windows CE
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-23 16:23 UTC by Andre Heinecke
Modified: 2011-03-03 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Debug output of success, offline/online (13.33 KB, application/octet-stream)
2011-02-23 16:23 UTC, Andre Heinecke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Heinecke 2011-02-23 16:23:03 UTC
Created attachment 57467 [details]
Debug output of success, offline/online

Version:           unspecified (using Devel) 
OS:                Windows CE

When sending E-Mails under some circumstances the maildispatcher can get stuck in the state: Online, sending messages

Steps to reproduce:
- Be offline
- Send a mail
- go online
-> Sending status indicator shows up for ~60 seconds after that it goes back to the normal online status. Mail is still in outbox, no error message. According to akonadiconsole the maildispatcher is online and sending.
After more then an hour the mail was still in the outbox.

Problematic about this bug is that it is not fully reproducable. 
I've tried the same again and this time the mail was successfully sent when the connection was established.

I've sent a mail while a general network connection was established (status online) but no internet connection was available and got an error message that the mail server could not be reached. When i established the internet connection after that the mail could be sent. 


Reproducible: Sometimes
Comment 1 Andre Heinecke 2011-02-23 16:24:45 UTC
The attached debug output is from successfully sending mails after going online again on windows ce.
Comment 2 Andre Heinecke 2011-02-23 16:38:10 UTC
I've tried this three more times and always got the same "good" results that the mails were either sent or i got an error that they could not be sent.

Since two occurances of this bug occured at around the same time today on the same server it might have additional reasons.
Comment 3 Tobias Koenig 2011-03-03 11:56:52 UTC
Git commit d7871f0a51a9c92b5f7b3cff582e1eda9a2b8a42 by Tobias Koenig.
Committed on 03/03/2011 at 11:57.
Pushed by tokoe into branch 'komo3'.

Report connection errors correctly to prevent hangs

The SmtpSession did not report socket errors back correctly
which lead to hangs inside the maildispatcher who was waiting
for the SmtpSession to finish its job.

BUG: 266984

M  +6    -0    mailtransport/smtp/smtpsession.cpp     

http://commits.kde.org/kdepimlibs/d7871f0a51a9c92b5f7b3cff582e1eda9a2b8a42