Report connection errors correctly to prevent hangs

The SmtpSession did not report socket errors back correctly
which lead to hangs inside the maildispatcher who was waiting
for the SmtpSession to finish its job.

BUG: 266984